--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,185 @@
-body{
-	
-	background-color: lightblue;
+* {
+margin: 0;
+}
+
+html, body {
+height: 100%;
+font-family: 'Georgia', Times, Times New Roman, serif;
+background-image:url('../../assets/images/robo.png');
+}
+
+.wrapper {
+min-height: 100%;
+height: auto !important;
+/*height: 100%;*/
+margin: 0 auto;
 }
 
 header{
-	background-color: #fff;
-	padding: 40px 20px;
-	border-bottom: 2px solid #ccc;
-	width: 960px;
-	margin: 0 auto;
-	text-align: center;
+    background-color: #fff;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
+    border-bottom: 3px solid #ccc;
+    width: 100%;
+    height:90px;
+    margin-bottom: 40px
+    
+}
+
+header div{
+    width: 960px;
+    margin: 0 auto;
+    height: 90px;
 }
 
 .headerName{
-	float: left;
-	background-color: #4aaaa5;
-	size: 32px;
+    float: left;
+    background-color: #4aaaa5;
+    padding: 33px;
+    color:white;
+    font-size: 24px;
+    position: absolute;
+    font-weight: bold;
 }
 
 .headerNav{
-	float: right;
-	padding-right: 0px;
-	margin-right: -15px;
-
+    float: right;
+    padding: 38px 0;
+    margin-right: 1px;
+    text-align: center;
+    
 }
 
 .headerNav a{
-	text-decoration: none;
+    text-decoration: none;
+    font-size: 14px;
+    color: #c0b8ae;
+}
+
+.headerNav a:hover{
+     color: #4aaaa5;
+}
+
+.headerlinks{
+    padding: 0 0 0 10px;
+}
+
+.a{
+    padding-right: 10px;
+}
+
+.content{
+    width: 100%;
+    height: 400px;
+}
+
+.contentdiv{
+    width: 960px;
+    margin: 0 auto;
+    height: 400px;
+
+}
+
+.contentArea{
+    float: left;
+    width: 650px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 3px solid #dddddd;    
+}
+
+.contentSpaceing{
+    padding: 30px;
+    display: inline-block;
+    width: 590px
+}
+
+.about{
+    border-bottom: 3px solid #ddd;
+    margin-bottom: 30px;
+    padding-bottom: 25px;
+    color: #4aaaa5;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+/*index.html*/
+.profilePic{
+    float: left;
+    margin-right: 20px;
+    
+}
+/*index.html*/
+.para{
+    clear: both;
+    font-size: 16px;
+    color: #777777;
+
+}
+
+/*contact.html*/
+.form{
+    font-size: 16px;
+    color: #c0b8ae;
+
+}
+
+/*contact.html*/
+.formContent{
+    padding: 10px 0;
+}
+
+/*contact.html*/
+.button{
+/*    background-color: #4aaaa5;*/
+color: white;
+padding: 10px 20px;
+border: none;
+}
+
+.sidebar{
+    float:right;
+    width: 270px;
+    background-color: #fff;
+    border: 3px solid #ddd;
+    text-align: center;
+}
+
+.connect{
+    border-bottom: 2px solid #ebe4dc;
+    color: #45a8a5;
+    margin: 0 35px; 
+    padding: 25px 0;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.links{
+    margin: 20px auto;
+    width: 200px
+}
+
+.push{
+    clear: both;
+    height: 40px;
+}
+
+.footer {
+    clear: both;
+    height: 90px;
+}
+
+.footer{
+    background-color: #666666;
+    width: 100%;
+    margin: 0 auto 0 auto;
+    text-align: center;
+    color: #c0b8ae;
+    border-top: 9px solid #4aaaa5;
+    font-size: 12px;
+
+}
+
+.footerContainer{
+    padding: 39px;
+
 }
