--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
 margin: 0;
 }
 
+
+
 html, body {
 height: 100%;
 font-family: 'Georgia', Times, Times New Roman, serif;
@@ -59,6 +61,7 @@ header div{
      color: #4aaaa5;
      font-weight: bold;
      font-size: 20px;
+     transition: .5s;
 }
 
 .headerlinks{
@@ -177,7 +180,8 @@ border: none;
 }
 
 .links a:hover{
-    opacity:0.2;
+    opacity:0.5;
+    transition: 1s;
 }
 
 .push{
