--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,13 +74,13 @@ header div{
 
 .content{
     width: 100%;
-    height: 400px;
+/*    height: 400px;*/
 }
 
 .contentdiv{
     width: 960px;
     margin: 0 auto;
-    height: 400px;
+/*    height: 400px;*/
 
 }
 
@@ -111,8 +111,17 @@ header div{
 .profilePic{
     float: left;
     margin-right: 20px;
+    margin-bottom: 20px;
     
 }
+
+.profilePic2{
+    float: right;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 /*index.html*/
 .para{
     clear: both;
@@ -125,12 +134,13 @@ header div{
 .form{
     font-size: 16px;
     color: #c0b8ae;
-
+    width: 590px;
 }
 
 /*contact.html*/
 .formContent{
     padding: 10px 0;
+    width: 590px;
 }
 
 /*contact.html*/
@@ -155,6 +165,10 @@ border: none;
     width: 590px;
     height: 205px;
     margin-bottom: 55px;
+}
+
+.imagesHover:hover{
+    opacity: .5;
 }
 
 .sidebar{
